--- a/bootstrap_showcase/navbar.html
+++ b/bootstrap_showcase/navbar.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap_index.css">
   <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/popper.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -29,6 +29,7 @@
     <div class="row mt-4 mb-4">
       <div class="col-2 bd-sidebar">
         <ul class="nav flex-column">
+          <div class="bd-toc"><a class="bd-toc-link" href="../index.html">Home</a></div>
           <div class="bd-toc">Components</div>
           <li class="nav-item">
             <a class="nav-link" href="bootstrap_index.html">Alerts</a>
@@ -109,7 +110,7 @@
         <h1>Navbar</h1>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
+          <h3>Examples</h3>
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -149,7 +150,7 @@
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Supported content</h3>
+          <h3>Supported content</h3>
           <h5>Brand</h5>
           <!-- As a link -->
           <nav class="navbar navbar-light bg-light mb-3">
@@ -162,8 +163,7 @@
           <!-- Image and text -->
           <nav class="navbar navbar-light bg-light mb-3">
             <a class="navbar-brand" href="#">
-              <img src="" width="30" height="30" class="d-inline-block align-top"
-                alt="" style="background-color: rgb(134, 142, 150);">
+              <img src="image/bg-gradient.svg" width="30" height="30" class="d-inline-block align-top rounded" alt="...">
               Bootstrap
             </a>
           </nav>
@@ -268,7 +268,7 @@
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Color scheme</h3>
+          <h3>Color scheme</h3>
           <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -368,7 +368,7 @@
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Placement</h3>
+          <h3>Placement</h3>
           <h5>Default</h5>
           <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -475,7 +475,7 @@
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Responsive behavior</h3>
+          <h3>Responsive behavior</h3>
           <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
               aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -553,7 +553,7 @@
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">External content</h3>
+          <h3>External content</h3>
           <div class="pos-f-t">
             <div class="collapse" id="navbarToggleExternalContent">
               <div class="bg-dark p-4">
