--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@
   <!-- Start Marquee Section-->
   <section id="mid_container">
     <p>Today's Topic</p>
-    <a href="wizard_page/wizard_page.html">Wizard Page</a>
+    <a href="bootstrap_showcase/bootstrap_index.html">Bootstrap Showcase</a>
   </section>
   <!-- End Marquee Section-->
 
   <!-- Start List Section-->
   <section id="list_container">
+    <div>Practice 13
+      <span><a href="bootstrap_showcase/bootstrap_index.html">Bootstrap Showcase</a></span>
+    </div>
     <div>Practice 12
       <span><a href="wizard_page/wizard_page.html">Wizard Page</a></span>
     </div>
