--- a/bootstrap_showcase/badge.html
+++ b/bootstrap_showcase/badge.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap_index.css">
   <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/popper.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -29,6 +29,7 @@
     <div class="row mt-4 mb-4">
       <div class="col-2 bd-sidebar">
         <ul class="nav flex-column">
+          <div class="bd-toc"><a class="bd-toc-link" href="../index.html">Home</a></div>
           <div class="bd-toc">Components</div>
           <li class="nav-item">
             <a class="nav-link" href="bootstrap_index.html">Alerts</a>
@@ -109,7 +110,7 @@
         <h1>Badges</h1>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
+          <h3>Examples</h3>
           <h1>Example heading <span class="badge badge-secondary">New</span></h1>
           <h2>Example heading <span class="badge badge-secondary">New</span></h2>
           <h3>Example heading <span class="badge badge-secondary">New</span></h3>
@@ -119,17 +120,17 @@
         </div>
 
         <div class="bd-example">
-          <button type="button" class="btn btn-primary">
+          <button class="btn btn-primary" type="button">
             Notifications <span class="badge badge-light">4</span>
           </button>
-          <button type="button" class="btn btn-primary">
+          <button class="btn btn-primary" type="button">
             Profile <span class="badge badge-light">9</span>
             <span class="sr-only">unread messages</span>
           </button>
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Contextual variations</h3>
+          <h3>Contextual variations</h3>
           <span class="badge badge-primary">Primary</span>
           <span class="badge badge-secondary">Secondary</span>
           <span class="badge badge-success">Success</span>
@@ -141,7 +142,7 @@
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Pill badges</h3>
+          <h3>Pill badges</h3>
           <span class="badge badge-pill badge-primary">Primary</span>
           <span class="badge badge-pill badge-secondary">Secondary</span>
           <span class="badge badge-pill badge-success">Success</span>
@@ -153,15 +154,15 @@
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Links</h3>
-          <a href="#" class="badge badge-primary">Primary</a>
-          <a href="#" class="badge badge-secondary">Secondary</a>
-          <a href="#" class="badge badge-success">Success</a>
-          <a href="#" class="badge badge-danger">Danger</a>
-          <a href="#" class="badge badge-warning">Warning</a>
-          <a href="#" class="badge badge-info">Info</a>
-          <a href="#" class="badge badge-light">Light</a>
-          <a href="#" class="badge badge-dark">Dark</a>
+          <h3>Links</h3>
+          <a class="badge badge-primary" href="#">Primary</a>
+          <a class="badge badge-secondary" href="#">Secondary</a>
+          <a class="badge badge-success" href="#">Success</a>
+          <a class="badge badge-danger" href="#">Danger</a>
+          <a class="badge badge-warning" href="#">Warning</a>
+          <a class="badge badge-info" href="#">Info</a>
+          <a class="badge badge-light" href="#">Light</a>
+          <a class="badge badge-dark" href="#">Dark</a>
         </div>
 
       </div>
@@ -169,5 +170,6 @@
       <div class="col-2"></div>
     </div>
   </div>
+
 </body>
 </html>
