--- a/bootstrap_showcase/button_group.html
+++ b/bootstrap_showcase/button_group.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap_index.css">
   <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/popper.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -29,6 +29,7 @@
     <div class="row mt-4 mb-4">
       <div class="col-2 bd-sidebar">
         <ul class="nav flex-column">
+          <div class="bd-toc"><a class="bd-toc-link" href="../index.html">Home</a></div>
           <div class="bd-toc">Components</div>
           <li class="nav-item">
             <a class="nav-link" href="bootstrap_index.html">Alerts</a>
@@ -108,7 +109,7 @@
       <div class="col-8">
         <h1>Button group</h1>
         <div class="bd-example">
-          <h3 class="font-weight-normal">Basic example</h3>
+          <h3>Basic example</h3>
           <div class="btn-group" role="group" aria-label="Basic example">
             <button class="btn btn-secondary" type="button">Left</button>
             <button class="btn btn-secondary" type="button">Middle</button>
@@ -117,7 +118,7 @@
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Button toolbar</h3>
+          <h3>Button toolbar</h3>
           <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
             <div class="btn-group mr-2" role="group" aria-label="First group">
               <button class="btn btn-secondary" type="button">1</button>
@@ -145,7 +146,7 @@
               <div class="input-group-prepend">
                 <div class="input-group-text" id="btnGroupAddon">@</div>
               </div>
-              <input type="text" class="form-control" placeholder="Input group example" aria-label="Input group example" aria-describedby="btnGroupAddon">
+              <input class="form-control" type="text" placeholder="Input group example" aria-label="Input group example" aria-describedby="btnGroupAddon">
             </div>
           </div>
           <div class="btn-toolbar justify-content-between mt-3" role="toolbar" aria-label="Toolbar with button groups">
@@ -159,13 +160,13 @@
               <div class="input-group-prepend">
                 <div class="input-group-text" id="btnGroupAddon2">@</div>
               </div>
-              <input type="text" class="form-control" placeholder="Input group example" aria-label="Input group example"
+              <input class="form-control" type="text" placeholder="Input group example" aria-label="Input group example"
                      aria-describedby="btnGroupAddon2">
             </div>
           </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Sizing</h3>
+          <h3>Sizing</h3>
           <div class="btn-group btn-group-lg" role="group" aria-label="Large button group">
             <button class="btn btn-secondary" type="button">Left</button>
             <button class="btn btn-secondary" type="button">Middle</button>
@@ -186,13 +187,13 @@
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Nesting</h3>
+          <h3>Nesting</h3>
           <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
             <button type="button" class="btn btn-secondary">1</button>
             <button type="button" class="btn btn-secondary">2</button>
 
             <div class="btn-group" role="group">
-              <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
+              <button class="btn btn-secondary dropdown-toggle" id="btnGroupDrop1" type="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Dropdown
               </button>
@@ -205,12 +206,12 @@
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Vertical variation</h3>
+          <h3>Vertical variation</h3>
           <div class="btn-group-vertical" role="group" aria-label="Button group with nested dropdown">
             <button type="button" class="btn btn-secondary">Button</button>
             <button type="button" class="btn btn-secondary">Button</button>
             <div class="btn-group" role="group">
-              <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
+              <button class="btn btn-secondary dropdown-toggle" id="btnGroupDrop1" type="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Dropdown
               </button>
@@ -219,10 +220,11 @@
                 <a class="dropdown-item" href="#">Dropdown link</a>
               </div>
             </div>
-            <button type="button" class="btn btn-secondary">Button</button>
-            <button type="button" class="btn btn-secondary">Button</button>
+            <button class="btn btn-secondary" type="button">Button</button>
+            <button class="btn btn-secondary" type="button">Button</button>
           </div>
         </div>
+
       </div>
 
       <div class="col-2"></div>
