--- a/bootstrap_showcase/media_object.html
+++ b/bootstrap_showcase/media_object.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap_index.css">
   <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/popper.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -29,6 +29,7 @@
     <div class="row mt-4 mb-4">
       <div class="col-2 bd-sidebar">
         <ul class="nav flex-column">
+          <div class="bd-toc"><a class="bd-toc-link" href="../index.html">Home</a></div>
           <div class="bd-toc">Components</div>
           <li class="nav-item">
             <a class="nav-link" href="bootstrap_index.html">Alerts</a>
@@ -109,9 +110,9 @@
         <h1>Media object</h1>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
+          <h3>Examples</h3>
           <div class="media">
-            <img class="mr-3" width="64" height="64" alt="..." style="background-color: rgb(134, 142, 150);">
+            <img class="mr-3" width="64" height="64" src="image/bg-gradient.svg" alt="...">
             <div class="media-body">
               <h5 class="mt-0">Media heading</h5>
               Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum
@@ -122,9 +123,9 @@
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Nesting</h3>
+          <h3>Nesting</h3>
           <div class="media">
-            <img class="mr-3" width="64" height="64" alt="..." style="background-color: rgb(134, 142, 150);">
+            <img class="mr-3" width="64" height="64" src="image/bg-gradient.svg" alt="...">
             <div class="media-body">
               <h5 class="mt-0">Media heading</h5>
               Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
@@ -133,7 +134,7 @@
               felis
               in faucibus.
               <div class="media mt-3">
-                <img class="mr-3" width="64" height="64" alt="..." style="background-color: rgb(134, 142, 150);">
+                <img class="mr-3" width="64" height="64" src="image/bg-gradient.svg" alt="...">
                 <div class="media-body">
                   <h5 class="mt-0">Media heading</h5>
                   Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
@@ -148,9 +149,9 @@
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Alignment</h3>
+          <h3>Alignment</h3>
           <div class="media mb-3">
-            <img class="align-self-start mr-3" width="64" height="64" alt="..." style="background-color: rgb(134, 142, 150);">
+            <img class="align-self-start mr-3" width="64" height="64" src="image/bg-gradient.svg" alt="...">
             <div class="media-body">
               <h5 class="mt-0">Media heading</h5>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
@@ -161,7 +162,7 @@
             </div>
           </div>
           <div class="media mb-3">
-            <img class="align-self-center mr-3" width="64" height="64" alt="..." style="background-color: rgb(134, 142, 150);">
+            <img class="align-self-center mr-3" width="64" height="64" src="image/bg-gradient.svg" alt="...">
             <div class="media-body">
               <h5 class="mt-0">Media heading</h5>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
@@ -174,7 +175,7 @@
             </div>
           </div>
           <div class="media">
-            <img class="align-self-end mr-3" width="64" height="64" alt="..." style="background-color: rgb(134, 142, 150);">
+            <img class="align-self-end mr-3" width="64" height="64" src="image/bg-gradient.svg" alt="...">
             <div class="media-body">
               <h5 class="mt-0">Media heading</h5>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
@@ -189,7 +190,7 @@
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Order</h3>
+          <h3>Order</h3>
           <div class="media">
             <div class="media-body">
               <h5 class="mt-0 mb-1">Media object</h5>
@@ -197,15 +198,15 @@
               in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis
               in faucibus.
             </div>
-            <img src="..." class="ml-3" width="64" height="64" alt="..." style="background-color: rgb(134, 142, 150);">
+            <img class="ml-3" width="64" height="64" src="image/bg-gradient.svg" alt="...">
           </div>
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Media list</h3>
+          <h3>Media list</h3>
           <ul class="list-unstyled">
             <li class="media">
-            <img src="..." class="mr-3" width="64" height="64" alt="..." style="background-color: rgb(134, 142, 150);">
+            <img class="mr-3" width="64" height="64" src="image/bg-gradient.svg" alt="...">
             <div class="media-body">
               <h5 class="mt-0 mb-1">Media object</h5>
               Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum
@@ -214,7 +215,7 @@
             </div>
             </li>
             <li class="media my-3">
-              <img src="..." class="mr-3" width="64" height="64" alt="..." style="background-color: rgb(134, 142, 150);">
+              <img class="mr-3" width="64" height="64" src="image/bg-gradient.svg" alt="...">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">Media object</h5>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
@@ -225,7 +226,7 @@
               </div>
             </li>
             <li class="media">
-              <img src="..." class="mr-3" width="64" height="64" alt="..." style="background-color: rgb(134, 142, 150);">
+              <img class="mr-3" width="64" height="64" src="image/bg-gradient.svg" alt="...">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">Media object</h5>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
@@ -237,24 +238,6 @@
             </li>
           </ul>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
       </div>
 
