--- a/bootstrap_showcase/popover.html
+++ b/bootstrap_showcase/popover.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Jess Wu">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Web Practice | Bootstrap Carousel</title>
+  <title>Web Practice | Bootstrap Popover</title>
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap_index.css">
@@ -49,7 +49,7 @@
           <li class="nav-item">
             <a class="nav-link" href="card.html">Card</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="carousel.html">Carousel</a>
           </li>
           <li class="nav-item">
@@ -85,7 +85,7 @@
           <li class="nav-item">
             <a class="nav-link" href="pagination.html">Pagination</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="popover.html">Popover</a>
           </li>
           <li class="nav-item">
@@ -107,74 +107,44 @@
       </div>
 
       <div class="col-8">
-        <h1>Carousel</h1>
+        <h1>Popover</h1>
 
         <div class="bd-example">
           <h3>Examples</h3>
-          <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="image/bg-slide01.svg" height="400" width="800" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="image/bg-slide02.svg" height="400" width="800" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="image/bg-slide03.svg" height="400" width="800" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                </div>
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
+          <button class="btn btn-secondary" type="button" data-container="body" data-toggle="popover" data-placement="top"
+            data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+            Popover on top
+          </button>
+
+          <button class="btn btn-secondary" type="button" data-container="body" data-toggle="popover" data-placement="right"
+            data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+            Popover on right
+          </button>
+
+          <button class="btn btn-secondary" type="button" data-container="body" data-toggle="popover" data-placement="bottom"
+            data-content="Vivamus
+          sagittis lacus vel augue laoreet rutrum faucibus.">
+            Popover on bottom
+          </button>
+
+          <button class="btn btn-secondary" type="button" data-container="body" data-toggle="popover" data-placement="left"
+            data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+            Popover on left
+          </button>
         </div>
 
-        <!-- add .carousel-fade to animate slides -->
         <div class="bd-example">
-          <h3>Crossfade</h3>
-          <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="image/bg-slide01.svg" height="400" width="800" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="image/bg-slide02.svg" height="400" width="800" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="image/bg-slide03.svg" height="400" width="800" alt="...">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
+          <h3>Dismiss on next click</h3>
+          <a class="btn btn-lg btn-danger" tabindex="0" role="button" data-toggle="popover" data-trigger="focus"
+            title="Dismissible popover" data-content="And here's some amazing content. It's very engaging. Right?">Dismissible
+            popover</a>
+        </div>
+
+        <div class="bd-example">
+          <h3>Disabled element</h3>
+          <span class="d-inline-block" data-toggle="popover" data-content="Disabled popover">
+            <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled>Disabled button</button>
+          </span>
         </div>
 
       </div>
@@ -184,4 +154,15 @@
   </div>
 
 </body>
+
+<script>
+  $(function () {
+    $('[data-toggle="popover"]').popover()
+  })
+
+  $('.popover-dismiss').popover({
+    trigger: 'focus'
+  })
+</script>
+
 </html>
