--- a/bootstrap_showcase/tooltip.html
+++ b/bootstrap_showcase/tooltip.html
@@ -7,13 +7,13 @@
   <meta name="author" content="Jess Wu">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Web Practice | Bootstrap </title>
+  <title>Web Practice | Bootstrap Tooltip</title>
   <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap_index.css">
   <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/popper.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -29,6 +29,7 @@
     <div class="row mt-4 mb-4">
       <div class="col-2 bd-sidebar">
         <ul class="nav flex-column">
+          <div class="bd-toc"><a class="bd-toc-link" href="../index.html">Home</a></div>
           <div class="bd-toc">Components</div>
           <li class="nav-item">
             <a class="nav-link" href="bootstrap_index.html">Alerts</a>
@@ -99,47 +100,37 @@
           <li class="nav-item">
             <a class="nav-link" href="toast.html">Toast</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="tooltip.html">Tooltip</a>
           </li>
         </ul>
       </div>
 
       <div class="col-8">
-        <h1>Button</h1>
+        <h1>Tooltip</h1>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
+          <h3>Examples</h3>
+          <button class="btn btn-secondary" type="button" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+            Tooltip on top
+          </button>
+          <button class="btn btn-secondary" type="button" data-toggle="tooltip" data-placement="right" title="Tooltip on right">
+            Tooltip on right
+          </button>
+          <button class="btn btn-secondary" type="button" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">
+            Tooltip on bottom
+          </button>
+          <button class="btn btn-secondary" type="button" data-toggle="tooltip" data-placement="left" title="Tooltip on left">
+            Tooltip on left
+          </button>
         </div>
 
         <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
+          <h3>Disable element</h3>
+          <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Disabled tooltip">
+            <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled>Disabled button</button>
+          </span>
         </div>
-
-        <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
-        </div>
-
-        <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
-        </div>
-
-        <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
-        </div>
-
-        <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
-        </div>
-
-        <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
-        </div>
-
-        <div class="bd-example">
-          <h3 class="font-weight-normal">Examples</h3>
-        </div>
-
 
       </div>
 
@@ -148,4 +139,11 @@
   </div>
 
 </body>
+
+<script>
+  $(function () {
+    $('[data-toggle="tooltip"]').tooltip()
+  })
+</script>
+
 </html>
